[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsgauge"
version = "1.0.0"
description = "DNS response tester (UDP + DoH) with live status + ETA"
authors = [
    {name = "themorgantown"}
]
dependencies = [
    "dnspython>=2.5.0",
    "httpx[http2]>=0.27.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
dnsgauge = "dnsgauge:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["dnsgauge"]